--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -296,19 +296,25 @@ body {
   gap: 20px;
 }
 
+.contact-image {
+  flex: 1;
+  padding-right: 20px;
+}
+
 .contact-image img {
   width: 100%;
-  max-width: 500px;
+  max-width: 350px; /* You can adjust the max-width as per your requirement */
   border-radius: 8px;
   object-fit: cover;
 }
 
 .contact-form {
+  flex: 2;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 400px;
+  width: 100%;
 }
 
 .contact-form h1 {
