--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,14 @@
 /* Global Styles */
-body {
-  font-family: 'Arial', sans-serif;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Arial', sans-serif;
   background-color: #f4f4f4;
   color: #333333; /* Dark Gray for Text */
-  box-sizing: border-box;
 }
 
 /* Header */
@@ -240,18 +243,7 @@ h1, h2 {
   }
 }
 
-/* Basic Reset and Global Styles */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-}
-
+/* Projects Container */
 .projects-container {
   display: flex;
   flex-wrap: wrap;
@@ -321,6 +313,8 @@ body {
   font-size: 0.9rem;
   color: #666;
 }
+
+/* Certification Container */
 .certification-container {
   display: flex;
   flex-wrap: wrap;
